# software-rasterizer

./: .gitignore  CMakeLists.txt  README.md  RasterUtil.cpp  RasterUtil.h  RasterUtil.inl  TypeUtil.h  TypeUtil.inl  clipping.cpp  clipping.h  converters.cpp  converters.h  main.cpp  predef.cpp  predef.h  rasterizer.cpp  rasterizer.h  rasterizer.inl  reference.cpp  shaders.cpp  shaders.h  stb_image.c  user_data.cpp  user_data.h  util.cpp  util.h
